--- a/src/app/add-product-model/add-product-model.component.html
+++ b/src/app/add-product-model/add-product-model.component.html
@@ -1,6 +1,14 @@
 <div class="card">
     <div class="card-body">
         <h4 class="card-title">ADD PRODUCT(Model Driven Form)</h4>
+        <div class="alert alert-primary alert-dismissible fade show" role="alert"
+        *ngIf= "formSubmitted">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                <span class="sr-only">Close</span>
+            </button>
+            <strong>Bingo!!!!!Form Submitted.....</strong>
+        </div>
         <div class="row">
             <div class="col-md-6">
                 <form novalidate [formGroup]= "addProductForm">
@@ -32,8 +40,9 @@
                         <input type="text" name="productBrand" class="form-control"
                                     formControlName="productBrand">
                     </div>
-                    <button type='submit' class="btn btn-primary">Submit</button>
-                    <button type="button" class="btn btn-default">Reset</button>
+                    <button type='submit' [disabled] = "addProductForm.invalid" 
+                      (click)= "addProduct(addProductForm.value)" class="btn btn-primary">Submit</button>
+                    <button type="button"  (click)= "addProductForm.reset()" class="btn btn-default">Reset</button>
                 </form>
             </div>
             <div class="col-md-6">
