--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,13 +10,17 @@
                 <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/">Products</a>
+                <a class="nav-link" routerLink="/products">Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/sellers">Sellers</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
                     <a class="dropdown-item" routerLink="/add">Add Product</a>
                     <a class="dropdown-item" routerLink="/addcustomer">Add Customer</a>
+                    <a class="dropdown-item" routerLink="/addseller">Add Seller</a>
                 </div>
             </li>
         </ul>
